syntax = "proto3";

package generated;

option go_package = "internal/generated";

import "google/protobuf/duration.proto"; 

service Graph {
    rpc Add(AddGraphRequest) returns (AddGraphResponse);
    rpc Get(GetGraphRequest) returns (GetGraphResponse);
    rpc FindPath(FindPathRequest) returns (FindPathResponse);
}

message AddGraphRequest {
    uint32 vertices_count = 1;
    repeated uint32 degrees = 2;
    repeated uint32 weights = 3;
}

message AddGraphResponse {
    string graph_id = 1;
}

message GetGraphRequest {
    string graph_id = 1;
}

message GetGraphResponse {
    bytes b64_image = 1;
}

message FindPathRequest {
    string graph_id = 1;
    uint32 from = 2;
    uint32 to = 3;
}

message FindPathResponse {
    bytes b64_image = 1;
    google.protobuf.Duration duration = 2;
}
